--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
   "homepage": "https://github.com/AlexMeah/fetch-once",
   "devDependencies": {
     "chai": "^2.3.0",
-    "cheerio": "^0.19.0",
-    "cookie-parser": "^1.3.4",
-    "express": "^4.12.3",
     "glob": "^5.0.6",
     "grunt": "^0.4.5",
     "grunt-blanket": "0.0.8",
@@ -43,15 +40,7 @@
     "travis-cov": "^0.2.5"
   },
   "dependencies": {
-    "@tlrg/currencies-js": "^1.0.0",
-    "@tlrg/priceformat-js": "^1.0.0",
     "bluebird": "^2.9.25",
-    "check-nested": "0.0.3",
-    "handlebars": "^3.0.3",
-    "moment": "^2.10.3",
-    "numeral": "^1.5.3",
-    "object-hash": "^0.8.0",
-    "request": "^2.55.0",
-    "tlrg-logger": "^1.13.0"
+    "request": "^2.55.0"
   }
 }
