--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   },
   "dependencies": {
     "bluebird": "^2.9.25",
+    "isnumber": "^1.0.0",
+    "object-assign": "^3.0.0",
     "request": "^2.55.0"
   }
 }
