Replace request and promise libs

--- a/.jshintrc
+++ b/.jshintrc
@@ -36,6 +36,7 @@
         "sinon": true,
         "google": true,
         "wNumb": true,
-        "Image": true
+        "Image": true,
+        "Promise": true
     }
 }
